--- a/app/views/users/_review_dashboard_panel.html.erb
+++ b/app/views/users/_review_dashboard_panel.html.erb
@@ -43,7 +43,7 @@
 						</div>
 					<% end %>
 				<% else %>
-					<%= form_for current_user, url: user_review_file_upload_after_path(:user_to_edit => current_user), html: { multipart: true , }, :method => :POST do |form| %>
+					<%= form_for current_user, url: user_review_file_upload_after_path(:user_to_edit => current_user), html: { multipart: true}, :method => :POST do |form| %>
 					<div class="align-right">
 						<div class="file-name">
 							<%= form.file_field name %>
