--- a/app/views/users/review_dashboard_before.html.erb
+++ b/app/views/users/review_dashboard_before.html.erb
@@ -181,6 +181,19 @@
 
 				</div>
 			<% end %>
+			<% if current_user.progress_status=="before_accepted"%>
+				<p>Please, upload the following documents:</p>
+				<%= render partial: "users/review_dashboard_panel", :locals => {
+					:admin => true,
+					:name => :acceptance_letter,
+					:current_user => current_user,
+					:content => current_user.acceptance_letter,
+					:file_name => current_user.acceptance_letter_file_name,
+					:label => "Acceptance Letter"}  %>
+				<% if !current_user.acceptance_letter.blank?%>
+					<%= button_to "Notify student", user_admin_notify_uploaded_before_path, data: {confirm: "This will send an email to notify the student, are you sure?" }, :method=> :post, :class => "custom-button primary", :form_class => "finish_app", params: {:user => current_user} %>
+				<% end %>
+			<% end %>
 		</div>
 <%end%>
 </div>
