--- a/app/views/users/_user_dashboard_before_panel.html.erb
+++ b/app/views/users/_user_dashboard_before_panel.html.erb
@@ -1,6 +1,6 @@
 <div class="row">
 	<span class="dashboard-section" id="motivation-letter-tab">
-		<%unless admin === true or (!current_user.seeking_degree and name === :english_test_score ) or name === :spanish_test_score or name === :valid_insurance_policy %>
+		<%unless admin === true or (!current_user.seeking_degree and name === :english_test_score ) or name === :spanish_test_score or name ===:valid_insurance_policy %>
 				<span class="red">*</span>
 		<%else %>
 				<span class="red">&nbsp; </span>
@@ -31,7 +31,7 @@
 					<% if current_user.progress_status.include? "during" %>
 						<%= button_to "Delete", user_file_delete_url(:user => current_user.id, :attachment => name, :current_dm_version => current_user.current_during_la_version), :method=> :delete, :class => "custom-button" , :form_class =>   "deletion" %>
 					<% else %>
-					<%= button_to "Delete", user_file_delete_url(:id => current_user.id, :attachment => name), :method=> :delete, :class => "custom-button" , :form_class =>   "deletion" %>
+					<%= button_to "Delete", user_file_delete_url(:user => current_user.id, :attachment => name), :method=> :delete, :class => "custom-button" , :form_class =>   "deletion" %>
 					<% end%>
 				<%end%>
 				<a href="<%=  content.url%>" download="<%=  file_name %>"><button class="custom-button primary">Download</button></a>
