Final debugging of basic version done. Added buttons to notify student/admins.

--- a/app/views/user_mailer/admin_notify_closed_during.html.erb
+++ b/app/views/user_mailer/admin_notify_closed_during.html.erb
@@ -471,7 +471,7 @@
 
             <div style="Margin-left: 20px;Margin-right: 20px;">
               <div style="mso-line-height-rule: exactly;mso-text-raise: 4px;">
-                <h1 class="size-64" style="Margin-top: 0;Margin-bottom: 20px;font-style: normal;font-weight: normal;color: #000;font-size: 44px;line-height: 50px;font-family: avenir,sans-serif;text-align: center;" lang="x-size-64"><span class="font-avenir"><font color="#ffffff"><strong>Accepted to ETSIT-UPM</strong></font></span></h1>
+                <h1 class="size-64" style="Margin-top: 0;Margin-bottom: 20px;font-style: normal;font-weight: normal;color: #000;font-size: 44px;line-height: 50px;font-family: avenir,sans-serif;text-align: center;" lang="x-size-64"><span class="font-avenir"><font color="#ffffff"><strong>DM -LA modifications request closed</strong></font></span></h1>
               </div>
             </div>
 
