--- a/app/views/user_mailer/dm_cancel_mail_to_admins.html.erb
+++ b/app/views/user_mailer/dm_cancel_mail_to_admins.html.erb
@@ -2,7 +2,7 @@
 <!-- saved from url=(0105)https://upm3.createsend.com/t/ViewEmailInIFrame/j/138A9D92A0A8D8812540EF23F30FEDED/C67FD2F38AC4859C/?tx=0 -->
 <html style="margin: 0px; padding: 0px; height: 100%;" xmlns="http://www.w3.org/1999/xhtml"><!--<![endif]--><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 
-  <title>During the Mobility - LA documents have been uploaded</title>
+  <title>During the Mobility - LA modifications request cancelled</title>
   <!--[if !mso]><!--><meta http-equiv="X-UA-Compatible" content="IE=edge"><!--<![endif]-->
   <meta name="viewport" content="width=device-width"><style type="text/css">
   @media only screen and (min-width: 620px){.wrapper{min-width:600px !important}.wrapper h1{}.wrapper h1{font-size:64px !important;line-height:63px !important}.wrapper h2{}.wrapper h2{font-size:30px !important;line-height:38px !important}.wrapper h3{}.wrapper h3{font-size:22px !important;line-height:31px !important}.column{}.wrapper .size-8{font-size:8px !important;line-height:14px !important}.wrapper .size-9{font-size:9px !important;line-height:16px !important}.wrapper .size-10{font-size:10px !important;line-height:18px !important}.wrapper .size-11{font-size:11px !important;line-height:19px !important}.wrapper .size-12{font-size:12px !important;line-height:19px !important}.wrapper .size-13{font-size:13px !important;line-height:21px !important}.wrapper .size-14{font-size:14px !important;line-height:21px !important}.wrapper .size-15{font-size:15px !important;line-height:23px
@@ -442,6 +442,42 @@
       font-size: 64px !important;
       line-height: 63px !important;
     }
+    /* -------------------------------------
+        BUTTONS
+    ------------------------------------- */
+    .btn {
+      box-sizing: border-box;
+      width: 100%; }
+    .btn > tbody > tr > td {
+      padding-bottom: 15px; }
+    .btn table {
+      width: auto; }
+    .btn table td {
+      background-color: #ffffff;
+      border-radius: 5px;
+      text-align: center; }
+    .btn a {
+      background-color: #ffffff;
+      border: solid 1px #3498db;
+      border-radius: 5px;
+      box-sizing: border-box;
+      color: #3498db;
+      cursor: pointer;
+      display: inline-block;
+      font-size: 14px;
+      font-weight: bold;
+      margin: 0;
+      padding: 12px 25px;
+      text-decoration: none;
+      text-transform: capitalize; }
+
+    .btn-primary table td {
+      background-color: #3498db; }
+
+    .btn-primary a {
+      background-color: #3498db;
+      border-color: #3498db;
+      color: #ffffff; }
   </style>
 
   <style type="text/css">
@@ -471,7 +507,7 @@
 
             <div style="Margin-left: 20px;Margin-right: 20px;">
               <div style="mso-line-height-rule: exactly;mso-text-raise: 4px;">
-                <h1 class="size-64" style="Margin-top: 0;Margin-bottom: 20px;font-style: normal;font-weight: normal;color: #000;font-size: 44px;line-height: 50px;font-family: avenir,sans-serif;text-align: center;" lang="x-size-64"><span class="font-avenir"><font color="#ffffff"><strong>Your documents have been uploaded</strong></font></span></h1>
+                <h1 class="size-64" style="Margin-top: 0;Margin-bottom: 20px;font-style: normal;font-weight: normal;color: #000;font-size: 44px;line-height: 50px;font-family: avenir,sans-serif;text-align: center;" lang="x-size-64"><span class="font-avenir"><font color="#ffffff"><strong>Student Application form</strong></font></span></h1>
               </div>
             </div>
 
@@ -502,18 +538,15 @@
 
           <div style="Margin-left: 20px;Margin-right: 20px;">
             <div style="mso-line-height-rule: exactly;mso-text-raise: 4px;">
+
               <h2 class="size-18" style="Margin-top: 0;Margin-bottom: 0;font-style: normal;font-weight: normal;color: #e31212;font-size: 17px;line-height: 26px;font-family: Avenir,sans-serif;text-align: center;" lang="x-size-18">
 
-                <span style="color:#18527c"><strong>Hi, </strong></span>
+                <span style="color:#18527c">Hi administrator, </span>
               </h2>
               <h2 class="size-18" style="Margin-top: 0;Margin-bottom: 0;font-style: normal;font-weight: normal;color: #18527c;font-size: 17px;line-height: 26px;font-family: Avenir,sans-serif;text-align: center;" lang="x-size-18">
-                Thank you for your patience. You can now find your updated payment letter and the modified During LA signed by the International Office's chef on the ETSIT-Erasmus app.
-              </h2>
-              </br>
-              <h2 class="size-18" style="Margin-top: 0;Margin-bottom: 0;font-style: normal;font-weight: normal;color: #e31212;font-size: 17px;line-height: 26px;font-family: Avenir,sans-serif;text-align: center;" lang="x-size-18">
-                <span style="color:#18527c"><strong>Please download both documents and upload the modified During LA signed by your host university as soon as possible.</strong></span>
-              </h2>
-
+                <strong><%= @user.first_name %></strong> has cancelled their During the Mobility LA modifications request.
+              <br/>
+              <br/>
             </div>
           </div>
 
